--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -51,23 +51,21 @@
                     <th></th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr th:each="profile : ${profiles}">
-                    <td th:text="${profile.profileId}"></td>
-                    <td th:text="${profile.profileSurname}"></td>
-                    <td th:text="${profile.profileName}"></td>
-                    <td><button class="btn btn-sm btn-outline-primary">Просмотреть</button></td>
-                </tr>
+                <tbody id="stores-table-body">
                 </tbody>
             </table>
             <button class="btn btn-primary">Добавить</button>
 
-            <h4 class="mt-4">Импорт данных из CSV-файла</h4>
-            <input type="file" class="form-control mt-2">
+            <h4 class="mt-4">Импорт данных из сsv-файла</h4>
+            <form id="upload-form" enctype="multipart/form-data">
+                <input type="file" id="file-input" class="form-control mt-2" accept=".zip" />
+                <button type="submit" class="btn btn-primary mt-2">Загрузить архив</button>
+            </form>
         </main>
     </div>
 </div>
-
+<script src="/js/upload.js"></script>
+<script src="/js/shops.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
