--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,6 @@
 
 <div class="container-fluid">
     <div class="row">
-
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
             <div class="position-sticky">
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
@@ -25,16 +24,19 @@
                 </h6>
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Электротовары</a>
+                        <a class="nav-link active" href="#" data-section="stores">Магазины</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Покупки</a>
+                        <a class="nav-link" href="#" data-section="electronics">Электротовары</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Сотрудники</a>
+                        <a class="nav-link" href="#" data-section="purchases">Покупки</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Справочники</a>
+                        <a class="nav-link" href="#" data-section="employees">Сотрудники</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-section="references">Справочники</a>
                     </li>
                 </ul>
             </div>
@@ -42,21 +44,28 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <h2 class="mt-3">Магазины</h2>
-            <table class="table table-striped">
+            <div id="summary-container"></div>
+            <table id="data-table" class="table table-striped">
                 <thead>
-                <tr>
+                <tr id="table-header">
                     <th>id</th>
                     <th>Наименование магазина</th>
                     <th>Адрес магазина</th>
                     <th></th>
                 </tr>
                 </thead>
-                <tbody id="stores-table-body">
+                <tbody id="table-body">
                 </tbody>
             </table>
             <button class="btn btn-primary">Добавить</button>
 
-            <h4 class="mt-4">Импорт данных из сsv-файла</h4>
+            <div class="pagination">
+                <button id="prev-page" disabled>Предыдущая</button>
+                <span>Страница <span id="current-page">1</span> из <span id="total-pages">1</span></span>
+                <button id="next-page" disabled>Следующая</button>
+            </div>
+
+            <h4 class="mt-4">Импорт данных из CSV-файла</h4>
             <form id="upload-form" enctype="multipart/form-data">
                 <input type="file" id="file-input" class="form-control mt-2" accept=".zip" />
                 <button type="submit" class="btn btn-primary mt-2">Загрузить архив</button>
@@ -64,8 +73,9 @@
         </main>
     </div>
 </div>
+
 <script src="/js/upload.js"></script>
-<script src="/js/shops.js"></script>
+<script src="/js/table.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
