--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,9 +38,9 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="referencesDropdown">
                             <li><a class="nav-link" href="#" data-section="positions">Справочник «Должности»</a></li>
-                            <li><a class="nav-link" href="#" data-section="electronics-type">Справочник «Тип электроники»</a></li>
+                            <li><a class="nav-link" href="#" data-section="electronicsTypes">Справочник «Типы электроники»</a></li>
                             <li><a class="nav-link" href="#" data-section="stores">Справочник «Магазины»</a></li>
-                            <li><a class="nav-link" href="#" data-section="purchase-type">Справочник «Тип покупки»</a></li>
+                            <li><a class="nav-link" href="#" data-section="purchasesTypes">Справочник «Типы покупок»</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -62,7 +62,8 @@
                 <tbody id="table-body">
                 </tbody>
             </table>
-            <button class="btn btn-primary">Добавить</button>
+
+            <div id="add-container"></div>
 
             <div class="pagination">
                 <button id="prev-page" disabled class="btn btn-primary btn-sm">Предыдущая</button>
