--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -64,6 +64,7 @@
             </table>
 
             <div id="add-container"></div>
+            <div id="update-container"></div>
 
             <div class="pagination">
                 <button id="prev-page" disabled class="btn btn-primary btn-sm">Предыдущая</button>
